Changes from 4.3.22 -> 4.4-alpha
===========================================

* Standardize command line options across most binaries


Changes from 4.3.21 -> 4.3.22 (6 Nov 2015)
===========================================

* rev 7723

* Ensure we don't leave xymond_hostdata or xymond_history zombies lying around
  after dropping host records (Reported by Scot Kreienkamp)
* Fix up HTML list layout to reflect current standards (Thanks, hallik@calyc3.com)
* Fix documentation incorrectly describing multigraph syntax as (e.g.) GRAPH_cpu.
  Should be GRAPHS_cpu (Thanks, Galen Johnson)
* Supports scientific notation for NCV data (Thanks, Axel Beckert)
* Increase resolution of xymonnet poll timing results (Thanks, Christoph Berg)
* New clock skew RRD files will allow for negative delta values (Thanks, Axel Beckert)
* Fix lots of typos! (Debian)
* Don't skip over "mailq.rrd" (Roland Rosenfeld)
* The signature algorithm used on an SSL-enabled TCP test run by xymonnet is now shown
  on the sslcert page. (Thanks, Ralph Mitchell)
* The cipher list displayed in 'sslcert' tests will now be limited to the cipher that was 
  actually used on the SSL connection. The --showallciphers option to xymonnet will
  restore the previous behavior. (From idea from Ralph Mitchell)
* Provide configurable environment overrides in xymonserver.cfg for standard xymonnet 
  options to fping/xymonping, ntpdate, and traceroute binaries. In regular installs, the
  intended default options to traceroute (-n -q 2 -w 2 -m 15) were not actually used. This
  may change in a future release, so it's suggested that users move any custom options to 
  the new TRACEROUTEOPTS setting in xymonserver.cfg.
  (Orig. thanks, Axel Beckert, ntpdate issues pointed out by Matt Vander Werf)
* Enable latent additional SHA digest strengths (sha256, sha512, sha224, sha384)
* Don't crash generating wml cards for statuses w/ very long lines (Reported by Axel Beckert)