@@ -20,6 +20,7 @@ void handle_sco_sv_client(char *hostname, char *clienttype, enum ostype_t os,
         char *timestr;
         char *uptimestr;
         char *clockstr;
+        char *proxystr;
         char *msgcachestr;
         char *whostr;
         char *psstr;
@@ -43,6 +44,7 @@ void handle_sco_sv_client(char *hostname, char *clienttype, enum ostype_t os,
         timestr = getdata("date");
         uptimestr = getdata("uptime");
         clockstr = getdata("clock");
+        proxystr = getdata("proxy");
         msgcachestr = getdata("msgcache");
         whostr = getdata("who");
         psstr = getdata("ps");
@@ -57,7 +59,7 @@ void handle_sco_sv_client(char *hostname, char *clienttype, enum ostype_t os,
         vmstatstr = getdata("vmstat");
         portsstr = getdata("ports");
 	
-	unix_cpu_report(hostname, clienttype, os, hinfo, fromline, timestr, uptimestr, clockstr, msgcachestr, 
+	unix_cpu_report(hostname, clienttype, os, hinfo, fromline, timestr, uptimestr, clockstr, msgcachestr, proxystr, timestamp, 
 			whostr, 0, psstr, 0, topstr);
 	unix_disk_report(hostname, clienttype, os, hinfo, fromline, timestr, "Available", "Capacity", "Mounted", dfstr);
 	unix_procs_report(hostname, clienttype, os, hinfo, fromline, timestr, "COMMAND", NULL, psstr);
