@@ -2,6 +2,8 @@ Changes from 4.3.22 -> 4.4-alpha
 ===========================================
 
 * Standardize command line options across most binaries
+* Attempt to get a more accurate clock delta when a client message has been
+  sent through a xymonproxy
 
 
 Changes from 4.3.21 -> 4.3.22 (6 Nov 2015)
